--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driver=org.mariadb.jdbc.Driver
-jdbc.url=jdbc:mariadb://localhost:3306/soft
+jdbc.url=jdbc\:mariadb\://localhost\:3306/db
 jdbc.username=root
 jdbc.password=123456
