--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -33,6 +33,6 @@
 	</filter-mapping>
 	<!-- 设置首页 -->
 	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
+		<welcome-file>home.html</welcome-file>
 	</welcome-file-list>
 </web-app>
